--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'kotlin-kapt'
 
 apply plugin: 'kotlin-android-extensions'
 
+
 android {
     compileSdkVersion compile_sdk_version
     buildToolsVersion build_tool_version
@@ -22,6 +23,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    repositories{
+        flatDir{
+            dirs 'libs'
+        }
+    }
 }
 
 dependencies {
@@ -33,8 +39,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     //Anko通用库
-    implementation "org.jetbrains.anko:anko:$anko_version"
-
+//    implementation "org.jetbrains.anko:anko:$anko_version"
     implementation "com.android.support:recyclerview-v7:$support_version"
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.squareup.picasso:picasso:2.3.2'
@@ -43,7 +48,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
-
     implementation 'com.google.dagger:dagger:2.11'
     kapt 'com.google.dagger:dagger-compiler:2.11'
+    implementation files('libs/MobCommons-2017.0607.1736.jar')
+    implementation files('libs/MobTools-2017.0607.1736.jar')
+    //手动配置
+    implementation name:'SMSSDK-3.0.0',ext:'aar'
 }
