短信登录校验Mob配置流程

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             android:value="2e8720d357994" />
         <meta-data
             android:name="Mob-AppSecret"
-            android:value="20104f7411ad27c79be8f1d8943e2d34" />
+            android:value="" />
 
         <activity android:name=".MainActivity">
             <intent-filter>
