--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     //Anko通用库
-//    implementation "org.jetbrains.anko:anko:$anko_version"
+    //    implementation "org.jetbrains.anko:anko:$anko_version"
     implementation "com.android.support:recyclerview-v7:$support_version"
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.squareup.picasso:picasso:2.3.2'
@@ -53,5 +53,6 @@ dependencies {
     implementation files('libs/MobCommons-2017.0607.1736.jar')
     implementation files('libs/MobTools-2017.0607.1736.jar')
     //手动配置
-    implementation name:'SMSSDK-3.0.0',ext:'aar'
+    implementation name: 'SMSSDK-3.0.0', ext: 'aar'
+    implementation 'com.j256.ormlite:ormlite-android:5.1'
 }
