--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    repositories{
-        flatDir{
+    repositories {
+        flatDir {
             dirs 'libs'
         }
     }
@@ -32,6 +32,13 @@ android {
         main {
             jniLibs.srcDirs = ['libs']
         }
+    }
+
+    //处理所有报META-INF/*'的错误  兼容Rxjava报错
+    packagingOptions {
+   exclude 'META-INF/rxjava.properties'
+    exclude 'META-INF/LICENSE'
+    exclude 'META-INF/DEPENDENCIES'
     }
 }
 
@@ -67,4 +74,14 @@ dependencies {
 //    implementation files('libs/jpush-android_v3.0.6.jar')
     implementation files('libs/jpush-android-3.3.8.jar')
     implementation files('libs/jcore-android-2.1.6.jar')
+    //Rxjava
+//    implementation "io.reactivex:rxjava:1.2.0"
+//    implementation "io.reactivex:rxandroid:1.2.0"
+
+//    implementation 'io.reactivex:rxjava:1.3.0'
+//    implementation 'io.reactivex:rxandroid:1.2.1'
+//    implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.0.7'
 }
