--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -54,6 +56,11 @@ dependencies {
     //    implementation "org.jetbrains.anko:anko:$anko_version"
     implementation "com.android.support:recyclerview-v7:$support_version"
     implementation 'com.android.support:design:28.0.0'
+//    implementation 'com.android.support:support-v13:23+'
+
+
+
+
     implementation 'com.squareup.picasso:picasso:2.3.2'
     implementation 'com.nineoldandroids:library:2.4.0'
     implementation 'com.daimajia.slider:library:1.1.5@aar'
@@ -84,4 +91,11 @@ dependencies {
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.0.7'
+
+
+    implementation 'com.flipboard:bottomsheet-commons:1.5.1'
+    implementation 'com.flipboard:bottomsheet-core:1.5.1'
+
+    implementation 'se.emilsjolander:stickylistheaders:2.7.0'
+
 }
