--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,6 +77,7 @@
             android:windowSoftInputMode="stateHidden|adjustResize"/>
 
         <activity android:name=".ui.activity.LogingActivity"></activity>
+        <activity android:name=".ui.activity.BusinessActivity"></activity>
 
 
 
