--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,12 @@ android {
     exclude 'META-INF/LICENSE'
     exclude 'META-INF/DEPENDENCIES'
     }
+
+        defaultConfig{
+            multiDexEnabled true
+        }
+
+
 }
 
 dependencies {
@@ -47,7 +53,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
-
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -56,11 +61,7 @@ dependencies {
     //    implementation "org.jetbrains.anko:anko:$anko_version"
     implementation "com.android.support:recyclerview-v7:$support_version"
     implementation 'com.android.support:design:28.0.0'
-//    implementation 'com.android.support:support-v13:23+'
-
-
-
-
+    //    implementation 'com.android.support:support-v13:23+'
     implementation 'com.squareup.picasso:picasso:2.3.2'
     implementation 'com.nineoldandroids:library:2.4.0'
     implementation 'com.daimajia.slider:library:1.1.5@aar'
@@ -77,25 +78,22 @@ dependencies {
     //    implementation files('libs/jpush-android_v3.0.6.jar')
     //    implementation files('libs/jcore-android-2.1.6.jar')
     //    implementation files('libs/jpush-android-3.3.8.jar')
-//    implementation files('libs/jcore-android_v1.1.3.jar')
-//    implementation files('libs/jpush-android_v3.0.6.jar')
+    //    implementation files('libs/jcore-android_v1.1.3.jar')
+    //    implementation files('libs/jpush-android_v3.0.6.jar')
     implementation files('libs/jpush-android-3.3.8.jar')
     implementation files('libs/jcore-android-2.1.6.jar')
     //Rxjava
-//    implementation "io.reactivex:rxjava:1.2.0"
-//    implementation "io.reactivex:rxandroid:1.2.0"
-
-//    implementation 'io.reactivex:rxjava:1.3.0'
-//    implementation 'io.reactivex:rxandroid:1.2.1'
-//    implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-
+    //    implementation "io.reactivex:rxjava:1.2.0"
+    //    implementation "io.reactivex:rxandroid:1.2.0"
+    //    implementation 'io.reactivex:rxjava:1.3.0'
+    //    implementation 'io.reactivex:rxandroid:1.2.1'
+    //    implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.0.7'
-
-
     implementation 'com.flipboard:bottomsheet-commons:1.5.1'
     implementation 'com.flipboard:bottomsheet-core:1.5.1'
-
     implementation 'se.emilsjolander:stickylistheaders:2.7.0'
-
+    implementation files('libs/Amap_2DMap_V6.0.0_20191106.jar')
+    implementation files('libs/AMap_Location_V4.9.0_20200302.jar')
+    implementation files('libs/AMap_Search_V7.3.0_20200331.jar')
 }
